--- a/portfolio.html
+++ b/portfolio.html
@@ -346,64 +346,78 @@
             
           </address>
         </div>
-        <!--Иконки социальных сетей-->
+      <!--Иконки социальных сетей-->
         
-          <div class="join-section">
-          <h4 class="join">Присоединяйтесь</h4>
-          <ul class="social-list link">
-            <li class="social-item">
-              <a
-                class="social-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Instagram"
-              >
-                <svg class="social-icon" width="20" height="20">
-                  <use href="./sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a
-                class="social-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Twitter"
-                ><svg class="social-icon" width="20" height="20">
-                  <use href="./sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a
-                class="social-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Facebook"
-                ><svg class="social-icon" width="20" height="20">
-                  <use href="./sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a
-                class="social-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="иконка Linkedin"
-                ><svg class="social-icon" width="20" height="20">
-                  <use href="./sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+      <div class="join-section">
+        <h4 class="join">Присоединяйтесь</h4>
+        <ul class="social-list link">
+          <li class="social-item">
+            <a
+              class="social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="иконка Instagram"
+            >
+              <svg class="social-icon" width="20" height="20">
+                <use href="./sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="иконка Twitter"
+              ><svg class="social-icon" width="20" height="20">
+                <use href="./sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="иконка Facebook"
+              ><svg class="social-icon" width="20" height="20">
+                <use href="./sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="иконка Linkedin"
+              ><svg class="social-icon" width="20" height="20">
+                <use href="./sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
-    </footer>
-    <script src="./js/modal.js"></script>
-  </body>
+      <div class="footer-form-container">
+      <form class="footer-form">
+        <div class="footer-mail-group">
+        <strong class="footer-form-title">Подпишитесь на рассылку</strong>
+        <input class="footer-email" type="email" name="footer-email" id="footer-email" placeholder="E-mail">
+      </div>
+      <div class="footer-mail-group">
+        <button class="footer-btn" type="submit">Подписаться
+          <svg class="send-footer-icon" width="24" height="24">
+          <use href="./sprite.svg#icon-send-footer"></use>
+        </svg></button></div>
+      </form>
+    </div>
+    </div>
+   
+  </footer>
+  <script src="./js/modal.js"></script>
+</body>
 </html>
