--- a/portfolio.html
+++ b/portfolio.html
@@ -408,7 +408,7 @@
         <strong class="footer-form-title">Подпишитесь на рассылку</strong>
         <input class="footer-email" type="email" name="footer-email" id="footer-email" placeholder="E-mail">
       </div>
-      <div class="footer-mail-group">
+      <div class="footer-mail-btn">
         <button class="footer-btn" type="submit">Подписаться
           <svg class="send-footer-icon" width="24" height="24">
           <use href="./sprite.svg#icon-send-footer"></use>
